# vehicle-tool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  imgui.ini
shaders/: mesh.frag  mesh.vert
src/: application.cpp  application.h  gl_utility.cpp  gl_utility.h  gltf_loader.cpp  gltf_loader.h  main.cpp  math_common.h  math_defines.h  obj_loader.cpp  obj_loader.h  precompiled.cpp  render_flags.h  renderer.cpp  renderer.h  utility.cpp  utility.h
src/types/: camera.cpp  camera.h  entity.h  light.h  material.h  mesh.h  model.cpp  model.h  scene.cpp  scene.h  vertex.h
